Resources page markup

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth Harm Reduction Stories</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="./assets/css/all.min.css"/>
+    <link rel="stylesheet" href="/assets/css/all.min.css"/>
 
 </head>
 <body>
@@ -35,7 +35,7 @@
             <a href="#stories" class="nav-link anchor-scroll">Stories</a>
             <a href="#events" class="nav-link anchor-scroll">Events</a>
             <a href="#footer" class="nav-link anchor-scroll">Contacts</a>
-            <a href="./pages/resources.html" target="_blank" class="nav-link nav-external">Resources</a>
+            <a href="/pages/resources.html" class="nav-link nav-external">Resources</a>
           </nav>
         </div>
   
@@ -45,8 +45,8 @@
 
     <header id="intro-section" class="header-section active-trigger">
 
-      <video id="intro-video" class="intro-video-box" preload="auto" poster="./assets/media/intro-poster.jpg" loop>
-        <source src="./assets/media/videos/Intro-Video.mp4" type="video/mp4">
+      <video id="intro-video" class="intro-video-box" preload="auto" poster="/assets/media/intro-poster.jpg" loop>
+        <source src="/assets/media/videos/Intro-Video.mp4" type="video/mp4">
         Your browser does not support the video tag. 
       </video>
 
@@ -111,12 +111,12 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="./assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
+                    <img src="/assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="./pages/story.html" class="story-link">
+                    <a href="/pages/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -125,12 +125,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="./assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
+                    <img src="/assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">Kym</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="./pages/story.html" class="story-link">
+                    <a href="/pages/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -139,12 +139,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="./assets/media/images/photos/Stories/3.jpg" alt="Story" class="story-card-img">
+                    <img src="/assets/media/images/photos/Stories/3.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">Donna</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="./pages/story.html" class="story-link">
+                    <a href="/pages/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -153,12 +153,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="./assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
+                    <img src="/assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="./pages/story.html" class="story-link">
+                    <a href="/pages/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -167,12 +167,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="./assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
+                    <img src="/assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="./pages/story.html" class="story-link">
+                    <a href="/pages/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -203,7 +203,7 @@
                   <div class="event-tag tag-option-2">Online</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">European Behavioural Pharmacology Society</h6>
@@ -221,7 +221,7 @@
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Kitchen Table Night</h6>
@@ -239,7 +239,7 @@
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Science in the Cinema</h6>
@@ -257,7 +257,7 @@
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Manitoba Harm Reduction Network</h6>
@@ -275,7 +275,7 @@
                   <div class="event-tag tag-option-2">Online</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Science in the Cinema</h6>
@@ -387,9 +387,10 @@
     </footer>
 
 
-    <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
+    <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/utils/plugins-setup.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
