Story page markup

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
         <div class="overlay-content">
             <h2 class="intro-heading" data-aos="zoom-in" data-aos-duration="1500">Young Adult Digital Storytelling</h2>
             <h3 class="intro-subheading" data-aos="zoom-in" data-aos-duration="1500">Cannabis Harm Reduction Project</h3>
-            <button id="intro-play" class="intro-play-btn" type="button"></button>
+            <!-- <button  class="intro-play-btn" type="button"></button> -->
+
+            <button type="button" id="intro-play" class="primary-btn with-l-ico watch-intro">
+              <span class="btn-ico-left">
+                <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"/></g></svg>
+              </span>
+               Watch how the stories are made
+            </button>
         </div>
 
         <button id="scroll-down" class="scroll-down-btn"></button>
@@ -116,7 +123,7 @@
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/story.html" class="story-link">
+                    <a href="/pages/stories/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -130,7 +137,7 @@
                   <div class="story-content-box">
                     <h6 class="story-name">Kym</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/story.html" class="story-link">
+                    <a href="/pages/stories/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -144,7 +151,7 @@
                   <div class="story-content-box">
                     <h6 class="story-name">Donna</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/story.html" class="story-link">
+                    <a href="/pages/stories/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -158,7 +165,7 @@
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/story.html" class="story-link">
+                    <a href="/pages/stories/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
@@ -172,7 +179,7 @@
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/story.html" class="story-link">
+                    <a href="/pages/stories/story.html" class="story-link">
                       Watch story
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
