Event page markup + some minor updates

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       
       <!-- Section Stories  -->
       <section id="stories" class="section active-trigger" data-aos="fade-up" data-aos-duration="1500">
+        <div id="stories-section" class="section-anchor"></div>
         <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">Stories</h2>
         <div class="section-wrapper" style="position: relative;">
           <div class="swiper-box">
@@ -200,11 +201,12 @@
       
       <!-- Section Events -->
       <section id="events" class="section active-trigger"  data-aos="fade-up" data-aos-duration="1500">
+        <div id="events-section" class="section-anchor"></div>
         <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">Our Events</h2>
         <div class="section-wrapper">
           <ul class="events-container">
             <li class="event-box">
-              <a href="#" class="event-link">
+              <a href="/pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-2">Online</div>
@@ -222,7 +224,7 @@
             </li>
 
             <li class="event-box">
-              <a href="#" class="event-link">
+              <a href="/pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Event</div>
                   <div class="event-tag tag-option-1">In Person</div>
@@ -240,7 +242,7 @@
             </li>
 
             <li class="event-box">
-              <a href="#" class="event-link">
+              <a href="/pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Event</div>
                   <div class="event-tag tag-option-1">In Person</div>
@@ -258,7 +260,7 @@
             </li>
 
             <li class="event-box">
-              <a href="#" class="event-link">
+              <a href="/pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-1">In Person</div>
@@ -276,7 +278,7 @@
             </li>
 
             <li class="event-box">
-              <a href="#" class="event-link">
+              <a href="/pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-2">Online</div>
@@ -285,7 +287,7 @@
                   <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
-                  <h6 class="event-header">Science in the Cinema</h6>
+                  <h6 class="event-header">Harm Reduction International in Bogota</h6>
                   <p class="event-date">April, 2025</p>
                   <p class="event-location">Bogota, Colombia</p>
                   <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
