--- a/pages/events/event.html
+++ b/pages/events/event.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources</title>
+    <title>European Behavioural Pharmacology Society</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
     <link rel="stylesheet" href="/assets/css/all.min.css"/>
@@ -14,12 +14,46 @@
         <div class="spinner"></div>
     </div>
 
-    <header>
+    <div class="section-wrapper medium-wrapper">
+      <nav aria-label="Breadcrumb" class="breadcrumbs">
+        <ol>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#events-section">Events</a></li>
+          <li aria-current="page">European Behavioural Pharmacology Society</li>
+        </ol>
+      </nav>
+    </div>
 
+    <header class="event-header-container">
+
+      <div class="event-header-box">
+        <img src="/assets/media/intro-poster.jpg" alt="Event Thumb">
+      </div>
+
+      <h2>European Behavioural Pharmacology Society</h2>
     </header>
 
 
     <main class="main">
+
+      <div class="section-wrapper medium-wrapper">
+
+        <div class="event-info-container">
+          <a href="https://maps.app.goo.gl/23LSmGfEao533eMv5" target="_blank" class="event-location">Banff, Canada</a>
+          <p class="event-date-box">26 September, 2024</p>
+          <div class="event-type-box">
+            <div class="event-tag tag-option-2">Online</div>
+            <div class="event-tag">Conference</div>
+          </div>
+        </div>
+
+        <div class="event-description-container">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, blanditiis optio debitis dolores doloribus fugit non ea accusamus culpa, officiis nemo quis iusto voluptate incidunt tenetur cum alias libero accusantium.</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, blanditiis optio debitis dolores doloribus fugit non ea accusamus culpa, officiis nemo quis iusto voluptate incidunt tenetur cum alias libero accusantium.</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, blanditiis optio debitis dolores doloribus fugit non ea accusamus culpa, officiis nemo quis iusto voluptate incidunt tenetur cum alias libero accusantium.</p>
+        </div>
+      </div>
+
 
     </main>
 
