--- a/pages/resources.html
+++ b/pages/resources.html
@@ -21,8 +21,8 @@
 
     <main id="resources" class="main">
 
-      <div class="section-wrapper">
-        <nav aria-label="Breadcrumb" class="breadcrumbs">
+      <div class="section-wrapper medium-wrapper">
+        <nav aria-label="Breadcrumb" class="breadcrumbs with-padding">
           <ol>
             <li><a href="/">Home</a></li>
             <li aria-current="page">Resources</li>
