--- a/pages/stories/story.html
+++ b/pages/stories/story.html
@@ -42,10 +42,11 @@
 
     <main class="main story-layout">
 
-      <div class="section-wrapper">
+      <div class="section-wrapper medium-wrapper">
         <nav aria-label="Breadcrumb" class="breadcrumbs">
           <ol>
             <li><a href="/">Home</a></li>
+            <li><a href="/#stories-section">Stories</a></li>
             <li aria-current="page">Lucky Story</li>
           </ol>
         </nav>
